[package]
name = "nockchain-jammer-api"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "fs"] }
chrono = "0.4"
tonic = "0.12"
prost = "0.13"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
strip = true
lto = true
